test/netlist/error/primitive-arity-2.bop
A(a, b) = (c, d)
where
  c, d = and(a, b);
end where;
